--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,10 +44,20 @@ jobs:
         run: |
           pip install -r test_requirements.txt
 
-      - name: make test
+      - name: test
         shell: bash
         run: |
-          python -m pytest -rsap -x tests
+          python -m pytest -rsap -x -m "not requires_ase" tests
+
+      - name: make with ase
+        shell: bash
+        run: |
+          pip install ".[ase]"
+
+      - name: test with requires_ase
+        shell: bash
+        run: |
+          python -m pytest -rsap -x -m "requires_ase" tests
 
       - name: Install doc requirements
         run: |
